--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
 	implementation 'com.google.code.gson:gson:2.8.6'	/* GSON */
 	implementation 'commons-io:commons-io:2.11.0'	/* Apache commons-io */
 	implementation group: 'commons-fileupload', name: 'commons-fileupload', version: '1.4' /* Apache Commons FileUpload */
+	implementation group: 'net.coobird', name: 'thumbnailator', version: '0.4.1'	/* thumbnailator */
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'mysql:mysql-connector-java'
